--- a/locales/realtimeWeather.zh_CN.json
+++ b/locales/realtimeWeather.zh_CN.json
@@ -2,9 +2,6 @@
   "meta": {
     "title": "实时天气",
     "description": "获取实时天气信息",
-    "tags": [
-      "天气",
-      "实时"
-    ]
+    "tags": ["天气", "实时"]
   }
 }
