--- a/locales/webCrawler.zh_CN.json
+++ b/locales/webCrawler.zh_CN.json
@@ -2,9 +2,6 @@
   "meta": {
     "title": "网站爬虫",
     "description": "从网页链接中提取内容",
-    "tags": [
-      "网页",
-      "内容爬取器"
-    ]
+    "tags": ["网页", "内容爬取器"]
   }
 }
