:sparkles: feat: add Weather GPT

--- a/locales/ask-your-pdf.zh-CN.json
+++ b/locales/ask-your-pdf.zh-CN.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "询问您的PDF",
+    "title": "AskYouPDF",
     "description": "释放您的PDF的力量！深入您的文档，找到答案，并将信息带到您的指尖。",
     "tags": ["pdf", "文档"]
   }
