--- a/locales/weather-gpt.zh-TW.json
+++ b/locales/weather-gpt.zh-TW.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "title": "天氣 GPT",
-    "description": "獲取特定位置的當前天氣信息。",
+    "description": "取得特定位置的即時天氣資訊。",
     "tags": ["天氣"]
   }
 }
