📝 chore: fix typo

--- a/locales/mindmap.de-DE.json
+++ b/locales/mindmap.de-DE.json
@@ -2,6 +2,6 @@
   "meta": {
     "title": "Mindmap",
     "description": "Ein Assistent zur Generierung von Mindmaps",
-    "tags": ["Mindmap", "Mind Map", "wird-i-18-n-im-Workflow-automatisch-generieren"]
+    "tags": ["Mindmap"]
   }
 }
