--- a/locales/mindmap.es-ES.json
+++ b/locales/mindmap.es-ES.json
@@ -2,6 +2,6 @@
   "meta": {
     "title": "Mapa mental",
     "description": "Un asistente de generación de mapas mentales",
-    "tags": ["Mapa mental", "Mapa mental", "generará-automáticamente-i-18-n-en-el-flujo-de-trabajo"]
+    "tags": ["Mapa mental"]
   }
 }
