--- a/locales/mindmap.fr-FR.json
+++ b/locales/mindmap.fr-FR.json
@@ -2,6 +2,6 @@
   "meta": {
     "title": "Mindmap",
     "description": "Un assistant de génération de mindmap",
-    "tags": ["Mindmap", "Mind map", "va-auto-générer-i-18-n-dans-le-flux-de-travail"]
+    "tags": ["Mindmap"]
   }
 }
