--- a/locales/mindmap.ja-JP.json
+++ b/locales/mindmap.ja-JP.json
@@ -2,6 +2,6 @@
   "meta": {
     "title": "マインドマップ",
     "description": "マインドマップ生成アシスタント",
-    "tags": ["マインドマップ", "マインドマップ", "ワークフローでI-18-Nを自動生成します"]
+    "tags": ["マインドマップ"]
   }
 }
