--- a/locales/mindmap.ru-RU.json
+++ b/locales/mindmap.ru-RU.json
@@ -2,10 +2,6 @@
   "meta": {
     "title": "Mindmap",
     "description": "Помощник по созданию ментальных карт",
-    "tags": [
-      "Mindmap",
-      "Ментальная карта",
-      "будет-автоматически-сгенерировано-i-18-n-в-рабочем-процессе"
-    ]
+    "tags": ["Ментальная карта"]
   }
 }
