--- a/locales/mindmap.tr-TR.json
+++ b/locales/mindmap.tr-TR.json
@@ -2,6 +2,6 @@
   "meta": {
     "title": "Zihin Haritası",
     "description": "Bir zihin haritası oluşturma yardımcısı",
-    "tags": ["Zihin Haritası", "Zihin haritası", "iş akışında-i-18-n-otomatik-oluşturulacak"]
+    "tags": ["Zihin Haritası"]
   }
 }
