--- a/locales/mindmap.ko-KR.json
+++ b/locales/mindmap.ko-KR.json
@@ -2,6 +2,6 @@
   "meta": {
     "title": "마인드맵",
     "description": "마인드맵 생성 보조 도구",
-    "tags": ["마인드맵", "마인드 맵", "워크플로우에서 자동으로 i18n을 생성할 것입니다"]
+    "tags": ["마인드맵"]
   }
 }
