--- a/locales/mindmap.pt-BR.json
+++ b/locales/mindmap.pt-BR.json
@@ -2,10 +2,6 @@
   "meta": {
     "title": "Mapa mental",
     "description": "Um assistente de geração de mapas mentais",
-    "tags": [
-      "Mapa mental",
-      "Mapa da mente",
-      "irá-gerar-automaticamente-i-18-n-no-fluxo-de-trabalho"
-    ]
+    "tags": ["Mapa mental"]
   }
 }
