--- a/locales/diagrams_show_me.zh-CN.json
+++ b/locales/diagrams_show_me.zh-CN.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "图表：展示给我",
+    "title": "图表工具",
     "description": "展示给我是一个强大的工具，旨在快速创建和编辑图表。",
     "tags": ["图表"]
   }
