--- a/locales/diagrams_show_me.zh-TW.json
+++ b/locales/diagrams_show_me.zh-TW.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "圖表：展示給我看",
+    "title": "圖表工具",
     "description": "展示給我看是一個強大的工具，專為快速創建和編輯圖表而設計。",
     "tags": ["圖表"]
   }
