--- a/locales/speak.zh-CN.json
+++ b/locales/speak.zh-CN.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "说",
+    "title": "Speak",
     "description": "使用Speak，您的AI语言导师，学习如何用另一种语言说任何事情。",
     "tags": ["教育", "语言"]
   }
