--- a/locales/nonprofits.zh-CN.json
+++ b/locales/nonprofits.zh-CN.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "变革",
+    "title": "Change",
     "description": "发现在您的社区和更广泛范围内支持的有影响力的非营利组织。",
     "tags": ["慈善"]
   }
