--- a/locales/Web.bg-BG.json
+++ b/locales/Web.bg-BG.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "title": "Уеб",
-    "description": "Умно уеб търсене, което чете и анализира страници, за да предостави изчерпателни отговори от резултатите на Google.",
+    "description": "Умен уеб търсене, което чете и анализира страници, за да предостави изчерпателни отговори от резултатите на Google.",
     "tags": ["уеб", "търсене"]
   }
 }
