--- a/locales/web.nl-NL.json
+++ b/locales/web.nl-NL.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "title": "Web",
-    "description": "Slimme webzoektocht die pagina's leest en analyseert om uitgebreide antwoorden te leveren uit Google-resultaten.",
+    "description": "Slimme webzoektocht die pagina's leest en analyseert om uitgebreide antwoorden uit Google-resultaten te leveren.",
     "tags": ["web", "zoektocht"]
   }
 }
