--- a/locales/web.zh-CN.json
+++ b/locales/web.zh-CN.json
@@ -1,7 +1,7 @@
 {
   "meta": {
-    "title": "网页",
-    "description": "智能网页搜索，读取和分析页面，以提供来自Google结果的全面答案。",
-    "tags": ["网页", "搜索"]
+    "title": "网络",
+    "description": "智能网络搜索，读取和分析页面，以从谷歌结果中提供全面的答案。",
+    "tags": ["网络", "搜索"]
   }
 }
