--- a/locales/web.zh-TW.json
+++ b/locales/web.zh-TW.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "title": "網頁",
-    "description": "智能網頁搜索，閱讀和分析頁面以提供來自 Google 結果的全面答案。",
+    "description": "智能網頁搜索，能夠閱讀和分析頁面，以從 Google 結果中提供全面的答案。",
     "tags": ["網頁", "搜索"]
   }
 }
